// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers views TOGGLE_ID_IN_PAGE_SELECTION should add an id in the list of selected ids 1`] = `
Immutable.Map {
  "_internal": Immutable.Map {
    "selectedItemsIds": Immutable.List [
      1,
      2,
      3,
      4,
      5,
      12,
    ],
  },
}
`;

exports[`reducers views TOGGLE_ID_IN_PAGE_SELECTION should remove an id in the list of selected ids 1`] = `
Immutable.Map {
  "_internal": Immutable.Map {
    "selectedItemsIds": Immutable.List [
      1,
      3,
    ],
  },
}
`;

exports[`reducers views TOGGLE_VIEW_SELECTION should toggle the entire view selection from not selected to selected 1`] = `
Immutable.Map {
  "active": Immutable.Map {
    "allItemsSelected": true,
  },
}
`;

exports[`reducers views TOGGLE_VIEW_SELECTION should toggle the entire view selection from selected to not selected 1`] = `
Immutable.Map {
  "active": Immutable.Map {
    "allItemsSelected": false,
  },
}
`;

exports[`reducers views UPDATE_PAGE_SELECTION should update the selected ids of the view 1`] = `
Immutable.Map {
  "items": Immutable.List [],
  "counts": Immutable.Map {},
  "active": Immutable.Map {},
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Array [
      1,
      2,
      3,
      4,
      5,
    ],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should create a view 1`] = `
Immutable.Map {
  "items": Immutable.List [
    Immutable.Map {
      "search": null,
      "order_by": "updated",
      "deactivated_datetime": null,
      "name": "New & Open Tickets",
      "slug": "new-&-open-tickets",
      "uri": "/api/views/7/",
      "decoration": null,
      "display_order": 1,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "visibility": "public",
      "section_id": null,
      "group_by": null,
      "fields": Immutable.List [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "type": "ticket-list",
      "id": 7,
      "filters": "neq(ticket.status, \\"closed\\")",
      "order_dir": "desc",
      "filters_ast": Immutable.Map {
        "sourceType": "script",
        "loc": Immutable.Map {
          "start": Immutable.Map {
            "column": 0,
            "line": 1,
          },
          "end": Immutable.Map {
            "column": 28,
            "line": 1,
          },
        },
        "type": "Program",
        "body": Immutable.List [
          Immutable.Map {
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
            "expression": Immutable.Map {
              "arguments": Immutable.List [
                Immutable.Map {
                  "object": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 4,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 10,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 11,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 17,
                        "line": 1,
                      },
                    },
                    "name": "status",
                  },
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                },
                Immutable.Map {
                  "value": "closed",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 19,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 27,
                      "line": 1,
                    },
                  },
                  "type": "Literal",
                  "raw": "\\"closed\\"",
                },
              ],
              "callee": Immutable.Map {
                "type": "Identifier",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 0,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 3,
                    "line": 1,
                  },
                },
                "name": "neq",
              },
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 28,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
          },
        ],
      },
      "category": null,
    },
  ],
  "counts": Immutable.Map {},
  "active": Immutable.Map {},
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Immutable.List [],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should delete a view  1`] = `
Immutable.Map {
  "items": Immutable.List [],
  "counts": Immutable.Map {},
  "active": Immutable.Map {},
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Immutable.List [],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should not add created view if already present 1`] = `
Immutable.Map {
  "items": Immutable.List [
    Immutable.Map {
      "search": null,
      "order_by": "updated",
      "deactivated_datetime": null,
      "name": "New & Open Tickets",
      "slug": "new-&-open-tickets",
      "uri": "/api/views/7/",
      "decoration": null,
      "display_order": 1,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "visibility": "public",
      "section_id": null,
      "group_by": null,
      "fields": Immutable.List [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "type": "ticket-list",
      "id": 7,
      "filters": "neq(ticket.status, \\"closed\\")",
      "order_dir": "desc",
      "filters_ast": Immutable.Map {
        "sourceType": "script",
        "loc": Immutable.Map {
          "start": Immutable.Map {
            "column": 0,
            "line": 1,
          },
          "end": Immutable.Map {
            "column": 28,
            "line": 1,
          },
        },
        "type": "Program",
        "body": Immutable.List [
          Immutable.Map {
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
            "expression": Immutable.Map {
              "arguments": Immutable.List [
                Immutable.Map {
                  "object": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 4,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 10,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 11,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 17,
                        "line": 1,
                      },
                    },
                    "name": "status",
                  },
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                },
                Immutable.Map {
                  "value": "closed",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 19,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 27,
                      "line": 1,
                    },
                  },
                  "type": "Literal",
                  "raw": "\\"closed\\"",
                },
              ],
              "callee": Immutable.Map {
                "type": "Identifier",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 0,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 3,
                    "line": 1,
                  },
                },
                "name": "neq",
              },
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 28,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
          },
        ],
      },
      "category": null,
    },
  ],
  "counts": Immutable.Map {},
  "active": Immutable.Map {},
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Immutable.List [],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should not add submitted view if already present 1`] = `
Immutable.Map {
  "items": Immutable.List [
    Immutable.Map {
      "search": null,
      "order_by": "updated",
      "deactivated_datetime": null,
      "name": "New & Open Tickets",
      "slug": "new-&-open-tickets",
      "uri": "/api/views/7/",
      "decoration": null,
      "display_order": 1,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "visibility": "public",
      "section_id": null,
      "group_by": null,
      "fields": Immutable.List [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "type": "ticket-list",
      "id": 7,
      "filters": "neq(ticket.status, \\"closed\\")",
      "order_dir": "desc",
      "filters_ast": Immutable.Map {
        "sourceType": "script",
        "loc": Immutable.Map {
          "start": Immutable.Map {
            "column": 0,
            "line": 1,
          },
          "end": Immutable.Map {
            "column": 28,
            "line": 1,
          },
        },
        "type": "Program",
        "body": Immutable.List [
          Immutable.Map {
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
            "expression": Immutable.Map {
              "arguments": Immutable.List [
                Immutable.Map {
                  "object": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 4,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 10,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 11,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 17,
                        "line": 1,
                      },
                    },
                    "name": "status",
                  },
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                },
                Immutable.Map {
                  "value": "closed",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 19,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 27,
                      "line": 1,
                    },
                  },
                  "type": "Literal",
                  "raw": "\\"closed\\"",
                },
              ],
              "callee": Immutable.Map {
                "type": "Identifier",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 0,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 3,
                    "line": 1,
                  },
                },
                "name": "neq",
              },
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 28,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
          },
        ],
      },
      "category": null,
    },
  ],
  "counts": Immutable.Map {},
  "active": Immutable.Map {
    "search": null,
    "order_by": "updated",
    "deactivated_datetime": null,
    "name": "New & Open Tickets",
    "slug": "new-&-open-tickets",
    "uri": "/api/views/7/",
    "decoration": null,
    "display_order": 1,
    "created_datetime": "2017-07-31T21:43:10.610368+00:00",
    "visibility": "public",
    "dirty": false,
    "section_id": null,
    "group_by": null,
    "fields": Immutable.List [
      "details",
      "tags",
      "customer",
      "created",
    ],
    "type": "ticket-list",
    "id": 7,
    "filters": "neq(ticket.status, \\"closed\\")",
    "order_dir": "desc",
    "filters_ast": Immutable.Map {
      "sourceType": "script",
      "loc": Immutable.Map {
        "start": Immutable.Map {
          "column": 0,
          "line": 1,
        },
        "end": Immutable.Map {
          "column": 28,
          "line": 1,
        },
      },
      "type": "Program",
      "body": Immutable.List [
        Immutable.Map {
          "loc": Immutable.Map {
            "start": Immutable.Map {
              "column": 0,
              "line": 1,
            },
            "end": Immutable.Map {
              "column": 28,
              "line": 1,
            },
          },
          "type": "ExpressionStatement",
          "expression": Immutable.Map {
            "arguments": Immutable.List [
              Immutable.Map {
                "object": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 10,
                      "line": 1,
                    },
                  },
                  "name": "ticket",
                },
                "property": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 11,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "name": "status",
                },
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 4,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 17,
                    "line": 1,
                  },
                },
                "type": "MemberExpression",
                "computed": false,
              },
              Immutable.Map {
                "value": "closed",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 19,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 27,
                    "line": 1,
                  },
                },
                "type": "Literal",
                "raw": "\\"closed\\"",
              },
            ],
            "callee": Immutable.Map {
              "type": "Identifier",
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 3,
                  "line": 1,
                },
              },
              "name": "neq",
            },
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "CallExpression",
          },
        },
      ],
    },
    "category": null,
  },
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Immutable.List [],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should set the edit mode to true on the view 1`] = `
Immutable.Map {
  "active": Immutable.Map {
    "id": 1,
    "editMode": true,
    "filter": Immutable.Map {},
  },
}
`;

exports[`reducers views should submit a view 1`] = `
Immutable.Map {
  "items": Immutable.List [
    Immutable.Map {
      "search": null,
      "order_by": "updated",
      "deactivated_datetime": null,
      "name": "New & Open Tickets",
      "slug": "new-&-open-tickets",
      "uri": "/api/views/7/",
      "decoration": null,
      "display_order": 1,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "visibility": "public",
      "section_id": null,
      "group_by": null,
      "fields": Immutable.List [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "type": "ticket-list",
      "id": 7,
      "filters": "neq(ticket.status, \\"closed\\")",
      "order_dir": "desc",
      "filters_ast": Immutable.Map {
        "sourceType": "script",
        "loc": Immutable.Map {
          "start": Immutable.Map {
            "column": 0,
            "line": 1,
          },
          "end": Immutable.Map {
            "column": 28,
            "line": 1,
          },
        },
        "type": "Program",
        "body": Immutable.List [
          Immutable.Map {
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
            "expression": Immutable.Map {
              "arguments": Immutable.List [
                Immutable.Map {
                  "object": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 4,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 10,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 11,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 17,
                        "line": 1,
                      },
                    },
                    "name": "status",
                  },
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                },
                Immutable.Map {
                  "value": "closed",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 19,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 27,
                      "line": 1,
                    },
                  },
                  "type": "Literal",
                  "raw": "\\"closed\\"",
                },
              ],
              "callee": Immutable.Map {
                "type": "Identifier",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 0,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 3,
                    "line": 1,
                  },
                },
                "name": "neq",
              },
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 28,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
          },
        ],
      },
      "category": null,
    },
  ],
  "counts": Immutable.Map {},
  "active": Immutable.Map {
    "search": null,
    "order_by": "updated",
    "deactivated_datetime": null,
    "name": "New & Open Tickets",
    "slug": "new-&-open-tickets",
    "uri": "/api/views/7/",
    "decoration": null,
    "display_order": 1,
    "created_datetime": "2017-07-31T21:43:10.610368+00:00",
    "visibility": "public",
    "dirty": false,
    "section_id": null,
    "group_by": null,
    "fields": Immutable.List [
      "details",
      "tags",
      "customer",
      "created",
    ],
    "type": "ticket-list",
    "id": 7,
    "filters": "neq(ticket.status, \\"closed\\")",
    "order_dir": "desc",
    "filters_ast": Immutable.Map {
      "sourceType": "script",
      "loc": Immutable.Map {
        "start": Immutable.Map {
          "column": 0,
          "line": 1,
        },
        "end": Immutable.Map {
          "column": 28,
          "line": 1,
        },
      },
      "type": "Program",
      "body": Immutable.List [
        Immutable.Map {
          "loc": Immutable.Map {
            "start": Immutable.Map {
              "column": 0,
              "line": 1,
            },
            "end": Immutable.Map {
              "column": 28,
              "line": 1,
            },
          },
          "type": "ExpressionStatement",
          "expression": Immutable.Map {
            "arguments": Immutable.List [
              Immutable.Map {
                "object": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 10,
                      "line": 1,
                    },
                  },
                  "name": "ticket",
                },
                "property": Immutable.Map {
                  "type": "Identifier",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 11,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "name": "status",
                },
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 4,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 17,
                    "line": 1,
                  },
                },
                "type": "MemberExpression",
                "computed": false,
              },
              Immutable.Map {
                "value": "closed",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 19,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 27,
                    "line": 1,
                  },
                },
                "type": "Literal",
                "raw": "\\"closed\\"",
              },
            ],
            "callee": Immutable.Map {
              "type": "Identifier",
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 3,
                  "line": 1,
                },
              },
              "name": "neq",
            },
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "CallExpression",
          },
        },
      ],
    },
    "category": null,
  },
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Immutable.List [],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should update a view 1`] = `
Immutable.Map {
  "items": Immutable.List [
    Immutable.Map {
      "search": null,
      "order_by": "updated",
      "deactivated_datetime": null,
      "name": "New & Open Tickets",
      "slug": "new-&-open-tickets",
      "uri": "/api/views/7/",
      "decoration": null,
      "display_order": 1,
      "created_datetime": "2017-07-31T21:43:10.610368+00:00",
      "visibility": "public",
      "section_id": null,
      "group_by": null,
      "fields": Immutable.List [
        "details",
        "tags",
        "customer",
        "created",
      ],
      "type": "system",
      "id": 7,
      "filters": "neq(ticket.status, \\"closed\\")",
      "order_dir": "desc",
      "filters_ast": Immutable.Map {
        "sourceType": "script",
        "loc": Immutable.Map {
          "start": Immutable.Map {
            "column": 0,
            "line": 1,
          },
          "end": Immutable.Map {
            "column": 28,
            "line": 1,
          },
        },
        "type": "Program",
        "body": Immutable.List [
          Immutable.Map {
            "loc": Immutable.Map {
              "start": Immutable.Map {
                "column": 0,
                "line": 1,
              },
              "end": Immutable.Map {
                "column": 28,
                "line": 1,
              },
            },
            "type": "ExpressionStatement",
            "expression": Immutable.Map {
              "arguments": Immutable.List [
                Immutable.Map {
                  "object": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 4,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 10,
                        "line": 1,
                      },
                    },
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "type": "Identifier",
                    "loc": Immutable.Map {
                      "start": Immutable.Map {
                        "column": 11,
                        "line": 1,
                      },
                      "end": Immutable.Map {
                        "column": 17,
                        "line": 1,
                      },
                    },
                    "name": "status",
                  },
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 4,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                },
                Immutable.Map {
                  "value": "closed",
                  "loc": Immutable.Map {
                    "start": Immutable.Map {
                      "column": 19,
                      "line": 1,
                    },
                    "end": Immutable.Map {
                      "column": 27,
                      "line": 1,
                    },
                  },
                  "type": "Literal",
                  "raw": "\\"closed\\"",
                },
              ],
              "callee": Immutable.Map {
                "type": "Identifier",
                "loc": Immutable.Map {
                  "start": Immutable.Map {
                    "column": 0,
                    "line": 1,
                  },
                  "end": Immutable.Map {
                    "column": 3,
                    "line": 1,
                  },
                },
                "name": "neq",
              },
              "loc": Immutable.Map {
                "start": Immutable.Map {
                  "column": 0,
                  "line": 1,
                },
                "end": Immutable.Map {
                  "column": 28,
                  "line": 1,
                },
              },
              "type": "CallExpression",
            },
          },
        ],
      },
      "category": null,
    },
  ],
  "counts": Immutable.Map {},
  "active": Immutable.Map {},
  "recent": Immutable.Map {},
  "loading": false,
  "_internal": Immutable.Map {
    "lastViewId": null,
    "selectedItemsIds": Immutable.List [],
    "navigation": Immutable.Map {},
    "loading": Immutable.Map {
      "fetchList": false,
      "fetchListDiscreet": false,
    },
  },
}
`;

exports[`reducers views should update field operator of active view 1`] = `
Immutable.Map {
  "active": Immutable.Map {
    "dirty": true,
    "filters": "neq(ticket.assignee_user.id, '2')",
    "filters_ast": Immutable.Map {
      "loc": SourceLocation {
        "end": Object {
          "column": 33,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "type": "Program",
      "body": Immutable.List [
        Immutable.Map {
          "loc": SourceLocation {
            "end": Object {
              "column": 33,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "type": "ExpressionStatement",
          "expression": Immutable.Map {
            "loc": WrappingSourceLocation {
              "end": Object {
                "column": 33,
                "line": 1,
              },
              "start": Object {
                "column": 0,
                "line": 1,
              },
            },
            "type": "CallExpression",
            "callee": Immutable.Map {
              "loc": SourceLocation {
                "end": Object {
                  "column": 3,
                  "line": 1,
                },
                "start": Position {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "Identifier",
              "name": "neq",
            },
            "arguments": Immutable.List [
              Immutable.Map {
                "loc": WrappingSourceLocation {
                  "end": Object {
                    "column": 27,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 4,
                    "line": 1,
                  },
                },
                "type": "MemberExpression",
                "computed": false,
                "object": Immutable.Map {
                  "loc": WrappingSourceLocation {
                    "end": Object {
                      "column": 24,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 4,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                  "object": Immutable.Map {
                    "loc": SourceLocation {
                      "end": Object {
                        "column": 10,
                        "line": 1,
                      },
                      "start": Position {
                        "column": 4,
                        "line": 1,
                      },
                    },
                    "type": "Identifier",
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "loc": SourceLocation {
                      "end": Object {
                        "column": 24,
                        "line": 1,
                      },
                      "start": Position {
                        "column": 11,
                        "line": 1,
                      },
                    },
                    "type": "Identifier",
                    "name": "assignee_user",
                  },
                },
                "property": Immutable.Map {
                  "loc": SourceLocation {
                    "end": Object {
                      "column": 27,
                      "line": 1,
                    },
                    "start": Position {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "type": "Identifier",
                  "name": "id",
                },
              },
              Immutable.Map {
                "loc": SourceLocation {
                  "end": Object {
                    "column": 32,
                    "line": 1,
                  },
                  "start": Position {
                    "column": 29,
                    "line": 1,
                  },
                },
                "type": "Literal",
                "value": "2",
                "raw": "'2'",
              },
            ],
          },
        },
      ],
      "sourceType": "script",
    },
  },
}
`;

exports[`reducers views should update field value of active view 1`] = `
Immutable.Map {
  "active": Immutable.Map {
    "dirty": true,
    "filters": "eq(ticket.assignee_user.id, '3')",
    "filters_ast": Immutable.Map {
      "loc": SourceLocation {
        "end": Object {
          "column": 32,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "type": "Program",
      "body": Immutable.List [
        Immutable.Map {
          "loc": SourceLocation {
            "end": Object {
              "column": 32,
              "line": 1,
            },
            "start": Position {
              "column": 0,
              "line": 1,
            },
          },
          "type": "ExpressionStatement",
          "expression": Immutable.Map {
            "loc": WrappingSourceLocation {
              "end": Object {
                "column": 32,
                "line": 1,
              },
              "start": Object {
                "column": 0,
                "line": 1,
              },
            },
            "type": "CallExpression",
            "callee": Immutable.Map {
              "loc": SourceLocation {
                "end": Object {
                  "column": 2,
                  "line": 1,
                },
                "start": Position {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "Identifier",
              "name": "eq",
            },
            "arguments": Immutable.List [
              Immutable.Map {
                "loc": WrappingSourceLocation {
                  "end": Object {
                    "column": 26,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 3,
                    "line": 1,
                  },
                },
                "type": "MemberExpression",
                "computed": false,
                "object": Immutable.Map {
                  "loc": WrappingSourceLocation {
                    "end": Object {
                      "column": 23,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 1,
                    },
                  },
                  "type": "MemberExpression",
                  "computed": false,
                  "object": Immutable.Map {
                    "loc": SourceLocation {
                      "end": Object {
                        "column": 9,
                        "line": 1,
                      },
                      "start": Position {
                        "column": 3,
                        "line": 1,
                      },
                    },
                    "type": "Identifier",
                    "name": "ticket",
                  },
                  "property": Immutable.Map {
                    "loc": SourceLocation {
                      "end": Object {
                        "column": 23,
                        "line": 1,
                      },
                      "start": Position {
                        "column": 10,
                        "line": 1,
                      },
                    },
                    "type": "Identifier",
                    "name": "assignee_user",
                  },
                },
                "property": Immutable.Map {
                  "loc": SourceLocation {
                    "end": Object {
                      "column": 26,
                      "line": 1,
                    },
                    "start": Position {
                      "column": 24,
                      "line": 1,
                    },
                  },
                  "type": "Identifier",
                  "name": "id",
                },
              },
              Immutable.Map {
                "loc": SourceLocation {
                  "end": Object {
                    "column": 31,
                    "line": 1,
                  },
                  "start": Position {
                    "column": 28,
                    "line": 1,
                  },
                },
                "type": "Literal",
                "value": "3",
                "raw": "'3'",
              },
            ],
          },
        },
      ],
      "sourceType": "script",
    },
  },
}
`;
